--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coursera searcher",
+  "name": "coursera-searcher",
   "dependencies": {
     "grunt": "^0.4.5",
     "grunt-chrome-extension-reload": "^0.2.6",
